--- a/employee.html
+++ b/employee.html
@@ -13,7 +13,7 @@
   <meta property="og:title" content="Aaditya Pal | Full Stack Developer">
   <meta property="og:description" content="Welcome to Aaditya Pal's portfolio. Explore projects, skills, and achievements in web development and data visualization.">
   <meta property="og:image" content="https://source.unsplash.com/featured/?developer,technology">
-  <meta property="og:url" content="https://your-portfolio-link.com">
+  <meta property="og:url" content="https://aadityapalsagwan-portfolio.onrender.com/">
   <meta property="og:type" content="website">
   
   <!-- Twitter Card -->
