--- a/privacy.html
+++ b/privacy.html
@@ -12,7 +12,7 @@
 <!-- Open Graph Meta Tags (Social Media Preview) -->
 <meta property="og:title" content="Aaditya Pal | Full Stack Developer">
 <meta property="og:description" content="Welcome to Aaditya Pal's portfolio. Explore projects, skills, and achievements in web development and data visualization.">
-<meta property="og:image" content="https://source.unsplash.com/featured/?developer,technology">
+<meta property="og:image" content="https://x.com/adityapalsagwan/status/1915339900603281743/photo/1">
 <meta property="og:url" content="https://aadityapalsagwan-portfolio.onrender.com/">
 <meta property="og:type" content="website">
 
@@ -20,7 +20,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Aaditya Pal | Full Stack Developer">
 <meta name="twitter:description" content="Explore the portfolio of Aaditya Pal, a Full Stack Developer specializing in MERN stack and Data Visualization.">
-<meta name="twitter:image" content="https://source.unsplash.com/featured/?developer,coding">
+<meta name="twitter:image" content="https://x.com/adityapalsagwan/status/1915339900603281743/photo/1">
 
 <link rel="shortcut icon" href="./assets/images/Adi.jpg" type="image/x-icon">
   <title>Privacy Policy | Portfolio</title>
