--- a/internshala-clone.html
+++ b/internshala-clone.html
@@ -13,7 +13,7 @@
     <!-- Open Graph Meta Tags (Social Media Preview) -->
     <meta property="og:title" content="Aaditya Pal | Full Stack Developer">
     <meta property="og:description" content="Welcome to Aaditya Pal's portfolio. Explore projects, skills, and achievements in web development and data visualization.">
-    <meta property="og:image" content="https://source.unsplash.com/featured/?developer,technology">
+    <meta property="og:image" content="https://x.com/adityapalsagwan/status/1915339900603281743/photo/1">
     <meta property="og:url" content="https://aadityapalsagwan-portfolio.onrender.com/">
     <meta property="og:type" content="website">
     
@@ -21,7 +21,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Aaditya Pal | Full Stack Developer">
     <meta name="twitter:description" content="Explore the portfolio of Aaditya Pal, a Full Stack Developer specializing in MERN stack and Data Visualization.">
-    <meta name="twitter:image" content="https://source.unsplash.com/featured/?developer,coding">
+    <meta name="twitter:image" content="https://x.com/adityapalsagwan/status/1915339900603281743/photo/1">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style>
