--- a/review.html
+++ b/review.html
@@ -238,13 +238,13 @@
 
         <section>
             <h2>Projects</h2>
-            <ul>
+             <ul>
                 <li><strong>Portfolio Website</strong> – Personal portfolio built with HTML, CSS, JavaScript showcasing
-                    skills and achievements.</li>
+                    skills and achievements. <a href="https://aadityapalsagwan-portfolio.onrender.com/" style="color: #007bff;  text-decoration:none;">Link Here</a></li>
                 <li><strong>Internshala Clone</strong> – Developed using HTML, CSS, JavaScript, and PHP, providing basic
-                    job posting and applying features.</li>
+                    job posting and applying features. <a href="https://github.com/aadityapalsagwan/Minor-Project-Course-Selling/" style="color: #007bff;  text-decoration:none;">Link Here</a></li>
                 <li><strong>React Dashboard (MERN Stack)</strong> – Data Visualization Dashboard created using React.js,
-                    Node.js, MongoDB, and D3.js for dynamic charts and insights.</li>
+                    Node.js, MongoDB, and D3.js for dynamic charts and insights. <a href="https://github.com/aadityapalsagwan/React-Dashboard/" style="color: #007bff;  text-decoration:none;">Link Here</a></li>
             </ul>
         </section>
 
