--- a/index.html
+++ b/index.html
@@ -349,6 +349,22 @@
                     </a>
                 </div>
             </div>
+                   <div class="project-card">
+                <img src="./assets/images/hotel website.png"
+                    alt="Project 5">
+                <div class="project-content">
+                    <h3>Employee Payroll System</h3>
+                    <p>The Employee Payroll System projects using Java with OOps Concepts.</p>
+                </div>
+                <div class="overlay">
+                    <!-- <a href="https://github.com/aadityapalsagwan/Java-Employee-PayrollSystem/" target="_blank" class="btn github-btn">
+                        <i class="fab fa-github"></i> GitHub
+                    </a> -->
+                    <a href="https://hotelbooking-5qwv.onrender.com/"  class="btn live-btn">
+                        Live 
+                    </a>
+                </div>
+            </div>
 
         </div> <!-- project-grid end -->
     </div> <!-- projects section end -->
