--- a/index.html
+++ b/index.html
@@ -353,8 +353,8 @@
                 <img src="./assets/images/hotel website.png"
                     alt="Project 5">
                 <div class="project-content">
-                    <h3>Employee Payroll System</h3>
-                    <p>The Employee Payroll System projects using Java with OOps Concepts.</p>
+                    <h3>Hotel Booking</h3>
+                    <p>A full-stack hotel booking platform inspired by OYO & Booking.com. Features include room , contact form, responsive UI, and real-world booking flow.</p>
                 </div>
                 <div class="overlay">
                     <!-- <a href="https://github.com/aadityapalsagwan/Java-Employee-PayrollSystem/" target="_blank" class="btn github-btn">
