--- a/index.html
+++ b/index.html
@@ -369,6 +369,74 @@
         </div> <!-- project-grid end -->
     </div> <!-- projects section end -->
 
+        <div id="achivement" class="achivement">
+        <h2 class="section-title">Achievements</h2>
+
+        <div class="achivement-grid">
+            <!-- Certificate Card -->
+            <!-- Certificate Card (PDF open on click) -->
+            <div class="certificate-card"
+                onclick="window.open('./assets/certificate/Python_Essentials_1.pdf', '_blank')">
+                <img src="./assets/images/python 1.png" alt="Python Certificate">
+                <!-- Use a JPG/PNG thumbnail here -->
+                <div class="certificate-info">
+                    <h3>Python Essentials 1</h3>
+                    <p>Issued by Cisco - 2024</p>
+                </div>
+            </div>
+
+
+            <div class="certificate-card"
+                onclick="window.open('./assets/certificate/Python_Essentials_2.pdf', '_blank')">
+                <img src="./assets/images/python 2.png" alt="Python Certificate">
+                <!-- Use a JPG/PNG thumbnail here -->
+                <div class="certificate-info">
+                    <h3>Python Essentials 2</h3>
+                    <p>Issued by Cisco - 2024</p>
+                </div>
+            </div>
+            <div class="certificate-card"
+                onclick="window.open('./assets/certificate/Create Image Captioning Models  Certificate.pdf', '_blank')">
+                <img src="./assets/images/Create image Captionig Model.png" alt="Python Certificate">
+                <!-- Use a JPG/PNG thumbnail here -->
+                <div class="certificate-info">
+                    <h3>CREATE IMAGE CAPTIONING MODELS</h3>
+                    <p>Issued by Simple Learn - 28<sup>th</sup> Jul 2024</p>
+                </div>
+            </div>
+            <div class="certificate-card"
+                onclick="window.open('./assets/certificate/Intriduction to AI Certificate.pdf', '_blank')">
+                <img src="./assets/images/Intriduction to AI Certificate.png" alt="Intriduction to AI Certificate">
+                <!-- Use a JPG/PNG thumbnail here -->
+                <div class="certificate-info">
+                    <h3>Intriduction to AI Certificate</h3>
+                    <p>Issued by Simple Learn - 28<sup>th</sup> Jul 2024</p>
+                </div>
+            </div>
+            <div class="certificate-card"
+                onclick="window.open('./assets/certificate/Aditya Pal google analytic finance.pdf', '_blank')">
+                <img src="./assets/images/Aditya Pal google analytic finance.png"
+                    alt="Aditya Pal google analytic finance">
+                <!-- Use a JPG/PNG thumbnail here -->
+                <div class="certificate-info">
+                    <h3>Google Analytic Finance</h3>
+                    <p>Issued by Great Learning - February 2023</p>
+                </div>
+            </div>
+            <div class="certificate-card"
+                onclick="window.open('./assets/certificate/Aditya pal sagwaan google analytic.pdf', '_blank')">
+                <img src="./assets/images/Aditya pal sagwaan google analytic.png"
+                    alt="Aditya pal sagwaan google analytic">
+                <!-- Use a JPG/PNG thumbnail here -->
+                <div class="certificate-info">
+                    <h3>Google Analytic</h3>
+                    <p>Issued by Great Learning - September 2022</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
     <div id="contact" class="contact-section">
         <h2 class="section-title">Contact</h2>
 
