--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 
             <div class="certificate-card"
                 onclick="window.open('./assets/certificate/Python_Essentials_2.pdf', '_blank')">
-                <img src="./assets/images/python 2.png" alt="Python Certificate">
+                <img src="./assets/images/Python 2.png" alt="Python Certificate">
                 <!-- Use a JPG/PNG thumbnail here -->
                 <div class="certificate-info">
                     <h3>Python Essentials 2</h3>
