--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                     <li><a class="nav-link" href="#education">Educations</a></li>
                     <li><a class="nav-link" href="#skill">Skills</a></li>
                     <li><a class="nav-link" href="#projects">Projects</a></li>
+                    <li><a class="nav-link" href="#achivement">Achivements</a></li>
                     <li><a class="nav-link" href="#contact">Contacts</a></li>
                 </ul>
             </div>
