--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta name="twitter:image" content="https://x.com/adityapalsagwan/status/1915339900603281743/photo/1">
     
     <!-- Favicon -->
-    <link rel="shortcut icon" href="./assets/images/Adi.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">
     
     <!-- Fonts and CSS -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
