--- a/index.html
+++ b/index.html
@@ -288,11 +288,11 @@
                     <p>A modern responsive Virtual Data Visulization Dashboard using Mearn Stack React.js or D3.js.</p>
                 </div>
                 <div class="overlay">
-                    <a href="https://github.com/aadityapalsagwan/React-Dashboard/" target="_blank" class="btn github-btn">
+<!--                     <a href="https://github.com/aadityapalsagwan/React-Dashboard/" target="_blank" class="btn github-btn">
                         <i class="fab fa-github"></i> GitHub
-                    </a>
-                    <a href="dashboard.html"  class="btn live-btn">
-                        Live Demo
+                    </a> -->
+                    <a href="https://virtual-dashboard-aadityapal.onrender.com/"  class="btn live-btn">
+                        Live On Internet
                     </a>
                 </div>
             </div>
