--- a/review.html
+++ b/review.html
@@ -244,14 +244,14 @@
                 <li><strong>Internshala Clone</strong> – Developed using HTML, CSS, JavaScript, and PHP, providing basic
                     job posting and applying features. <a href="https://github.com/aadityapalsagwan/Minor-Project-Course-Selling/" style="color: #007bff;  text-decoration:none;">Link Here</a></li>
                 <li><strong>React Dashboard (MERN Stack)</strong> – Data Visualization Dashboard created using React.js,
-                    Node.js, MongoDB, and D3.js for dynamic charts and insights. <a href="https://github.com/aadityapalsagwan/React-Dashboard/" style="color: #007bff;  text-decoration:none;">Link Here</a></li>
+                    Node.js, MongoDB, and D3.js for dynamic charts and insights. <a href="https://virtual-dashboard-aadityapal.onrender.com/" style="color: #007bff;  text-decoration:none;">Link Here</a></li>
             </ul>
         </section>
 
         <section>
             <h2>Internships</h2>
             <!-- <ul class="timeline"> -->
-            <li><strong>Web Development Intern</strong> | Code Tech | 1 Month | Built responsive websites and
+            <li><strong>Web Development Intern</strong> | CodeSoft | 1 Month | Built responsive websites and
                 contributed to frontend optimization projects.</li>
             <!-- </ul> -->
         </section>
