--- a/index.html
+++ b/index.html
@@ -548,6 +548,20 @@
     <button id="scrollToTopBtn" class="scroll-to-top-btn">↑</button>
     <!-- JavaScript -->
     <script src="./assets/js/script.js"></script>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Person",
+  "name": "Aaditya Pal",
+  "url": "https://yourdomain.com",
+  "jobTitle": "Full Stack Developer",
+  "sameAs": [
+    "https://linkedin.com/in/aadityapal",
+    "https://github.com/aadityapal"
+  ]
+}
+</script>
+
 
 </body>
 
