--- a/index.html
+++ b/index.html
@@ -49,10 +49,22 @@
 
   <!-- ✅ CSS -->
   <link rel="stylesheet" href="./assets/css/style.css">
+  <meta name="google-site-verification" content="rsb0wAPP7QaPUHIbm08G0t0d-Cic90B7oygYA_13C0A" />
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MVXSL6HN');</script>
+<!-- End Google Tag Manager -->
 </head>
 
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MVXSL6HN"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
     <header class="header">
         <div id="navbar" class="navbar">
