--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
   <!-- ✅ CSS -->
   <link rel="stylesheet" href="./assets/css/style.css">
   <meta name="google-site-verification" content="rsb0wAPP7QaPUHIbm08G0t0d-Cic90B7oygYA_13C0A" />
+  <meta name="google-site-verification" content="googlee69265a6530ed2e3" />
+
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
