--- a/car-rent.html
+++ b/car-rent.html
@@ -25,6 +25,17 @@
 
   <link rel="stylesheet" href="./assets/css/style.css">
 
+  <meta name="google-site-verification" content="rsb0wAPP7QaPUHIbm08G0t0d-Cic90B7oygYA_13C0A" />
+  <meta name="google-site-verification" content="googlee69265a6530ed2e3" />
+
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MVXSL6HN');</script>
+<!-- End Google Tag Manager -->
+
   <style>
     * {
       margin: 0;
