--- a/internshala-clone.html
+++ b/internshala-clone.html
@@ -24,6 +24,17 @@
     <meta name="twitter:image" content="https://x.com/adityapalsagwan/status/1915339900603281743/photo/1">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
+    <meta name="google-site-verification" content="rsb0wAPP7QaPUHIbm08G0t0d-Cic90B7oygYA_13C0A" />
+  <meta name="google-site-verification" content="googlee69265a6530ed2e3" />
+
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MVXSL6HN');</script>
+<!-- End Google Tag Manager -->
     <style>
         * {
             margin: 0;
