--- a/term.html
+++ b/term.html
@@ -22,6 +22,16 @@
 <meta name="twitter:title" content="Aaditya Pal | Full Stack Developer">
 <meta name="twitter:description" content="Explore the portfolio of Aaditya Pal, a Full Stack Developer specializing in MERN stack and Data Visualization.">
 <meta name="twitter:image" content="https://x.com/adityapalsagwan/status/1915339900603281743/photo/1">
+  <meta name="google-site-verification" content="rsb0wAPP7QaPUHIbm08G0t0d-Cic90B7oygYA_13C0A" />
+  <meta name="google-site-verification" content="googlee69265a6530ed2e3" />
+
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MVXSL6HN');</script>
+<!-- End Google Tag Manager -->
 
   <link rel="shortcut icon" href="./assets/images/Adi.jpg" type="image/x-icon">
   <title>Terms & Conditions - HERA</title>
