--- a/dashboard.html
+++ b/dashboard.html
@@ -38,6 +38,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 
 <body>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MVXSL6HN"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     <header class="animate__animated animate__fadeInDown  dashboard-header">Modern Dashboard Analytics</header>
     
     <div class="container-dashboard">
