--- a/privacy.html
+++ b/privacy.html
@@ -82,6 +82,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </style>
 </head>
 <body>
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MVXSL6HN"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <header>Portfolio</header>
   <div class="container">
     <a class="back-link" href="index.html">&larr; Back to Home</a>
