--- a/term.html
+++ b/term.html
@@ -32,6 +32,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-MVXSL6HN');</script>
 <!-- End Google Tag Manager -->
 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-66Y3F43ZBN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-66Y3F43ZBN');
+</script>
+
   <link rel="shortcut icon" href="./assets/images/Adi.jpg" type="image/x-icon">
   <title>Terms & Conditions - HERA</title>
   <style>
