--- a/index.html
+++ b/index.html
@@ -403,6 +403,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </div>
 
+                <div class="project-card">
+                <img src="./assets/images/ebook.jpeg" alt="Project 6">
+                <div class="project-content">
+                    <h3>E-Books Store</h3>
+                    <p>A responsive and user-friendly web application where users can buy e-books across various categories.</p>
+                </div>
+                <div class="overlay">
+                    <!-- <a href="https://github.com/aadityapalsagwan/Java-Employee-PayrollSystem/" target="_blank" class="btn github-btn">
+                        <i class="fab fa-github"></i> GitHub
+                    </a> -->
+                    <a href="https://ebookstore-webapp.onrender.com/" class="btn live-btn">
+                        Live On Internet
+                    </a>
+                </div>
+            </div>
+
         </div> <!-- project-grid end -->
     </div> <!-- projects section end -->
 
